# FuckitPy

./: FuckitPy.py  README.md  broke.py  broke_import.py  setup.cfg
src/fuckitpy/: FuckitPy.py  fuckitpy.py
tests/: broke.py  broke_.py  broke_import.py  test.py
