[metadata]
name = FuckItPy
version = 0.0.1
author = BachelorForever
description = Best way to eliminate python errors!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BachelorForever/FuckitPy
project_urls =
    Bug Tracker = https://github.com/BachelorForever/FuckitPy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: WTF License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
scripts =
    src/fuckitpy/fuckitpy.py
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    fuckitpy = fuckitpy.fuckitpy:main